fixed minor layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,3 +63,9 @@ input{
 .display{
     display: inline-block;
 }
+
+@media screen and (max-width: 768px) {
+    header{
+        padding: 10px;
+    }
+}
